--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Merriweather';
+@import 'https://fonts.googleapis.com/css2?family=Inter';
 /*
  *  INITIAL STYLES
  */
@@ -23,7 +23,7 @@ body {
   background-color: #ddd;
   background-image: url(../bg.jpg);
   color: #111;
-  font-family: Merriweather, serif;
+  font-family: Inter, serif;
   letter-spacing: 0.04rem;
   display: flex;
   flex-direction: column;
@@ -62,7 +62,7 @@ body a:hover {
 }
 .content .findBar .search {
   padding: 1rem;
-  font-family: Merriweather, serif;
+  font-family: Inter, serif;
   font-size: 1.2rem;
   color: #111;
   width: 90%;
@@ -122,6 +122,7 @@ body a:hover {
   flex: 1 1 20rem;
   text-align: center;
   border-left: 2px solid #333;
+  border-radius: 20px;
   transition: all 0.2s ease-out;
 }
 .content .results .result:hover {
